# fastapi-backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: auth.py  cosmos.py  main.py
app/models/: item.py
app/utils/: cosmos.py  search.py
terraform/: aisearch.tf  cosmosdb.tf  main.tf  terraform.tfvars.SAMPLE  variables.tf  versions.tf
